added debug statement for URI check in server

--- a/src/chatclient.html
+++ b/src/chatclient.html
@@ -41,6 +41,7 @@
             }
 
             var wsUri = "ws://localhost:1234";
+            debug("the URI is set:", wsUri);
             var websocket = null;
 
             function initWebSocket() {
